# rustdbg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  install.sh
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/: FINDINGS.md  README.md  bench_repo.py  bench_tsz.py
benchmarks/adopt/: results-hardbug.json  results.json  rl-literature.json  run_one.py
benchmarks/results-repo/: cases.json
benchmarks/results-tsz/: README.md  cases-tsz.json  run2-opus-vs-sonnet.md  run3-full-sweep.md  runs-A.json  runs-B.json  runs-final.json  runs-opus-B.json  runs-opus.json  runs-sonnet.json
benchmarks/tasks/rpncalc/: Cargo.toml  PROMPT.md
benchmarks/tasks/rpncalc/src/: lib.rs
docker/: Dockerfile  test.sh
docs/: json-schema.md  rl-directions.md
site/: index.html
skill/rust-debugger/: SKILL.md
src/: client.rs  daemon.rs  dap.rs  lsp.rs  main.rs  mcp.rs  render.rs  session.rs  util.rs
