[package]
name = "rdbg"
version = "0.3.0"
edition = "2021"
description = "IDE-grade Rust debugging for coding agents — a skill and an MCP server, built on rust-analyzer and lldb-dap."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mohsen1/rust-debugger-skill"
readme = "README.md"

[[bin]]
name = "rdbg"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
